--- a/footer.css
+++ b/footer.css
@@ -86,6 +86,12 @@
   font-size: 1.5rem;
 }
 
+.doacoes a {
+  color: #fff;
+  padding: 15px 20px;
+  font-size: 3rem;
+}
+
 @media (max-width: 800px) {
   .footer {
     grid-template-columns: 1fr;
