Alterações de dados da ONG.

--- a/article.css
+++ b/article.css
@@ -106,6 +106,7 @@
     padding-top: 0px;
     display: grid;
     grid-template-columns: 1fr;
+    margin: 0px 5px;
   }
   .article img {
     padding-top: 25px;
