--- a/footer.css
+++ b/footer.css
@@ -86,6 +86,10 @@
   font-size: 1.5rem;
 }
 
+.footer-formulario h4 {
+  text-align: center;
+}
+
 .doacoes a {
   color: #fff;
   padding: 15px 20px;
